// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseAlert.vue > renders props.text when an empty string passed 1`] = `
"<div class="v-alert v-theme--light v-alert--density-default v-alert--variant-outlined" role="alert">
  <!----><span class="v-alert__underlay"></span>
  <!---->
  <div class="v-alert__prepend"><i class="mdi-information mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="default"></i></div>
  <div class="v-alert__content">
    <!---->
    <!---->
  </div>
  <!---->
  <div class="v-alert__close"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-x-small v-btn--variant-text" aria-label="Close"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
      <!---->
      <!---->
    </button></div>
</div>"
`;

exports[`BaseAlert.vue > renders props.text when passed 1`] = `
"<div class="v-alert v-theme--light v-alert--density-default v-alert--variant-outlined" role="alert">
  <!----><span class="v-alert__underlay"></span>
  <!---->
  <div class="v-alert__prepend"><i class="mdi-information mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="default"></i></div>
  <div class="v-alert__content">
    <!---->Alert Text
    <!---->
  </div>
  <!---->
  <div class="v-alert__close"><button type="button" class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-x-small v-btn--variant-text" aria-label="Close"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-close mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
      <!---->
      <!---->
    </button></div>
</div>"
`;
